\n and whitespace error cases resolved.

--- a/styles/main.css
+++ b/styles/main.css
@@ -49,7 +49,7 @@ body
   color: var(--primary-color);
   border: 2px solid var(--primary-color);
   border-radius: 10px;
-  gap: 4rem;
+  gap: 3rem;
 }
 
 .container h1
@@ -60,16 +60,20 @@ body
   text-align: center;
 }
 
-.container h2,
+.container h2
+{
+  font-family: 'Progress', sans-serif;
+  font-size: 2rem;
+  text-align: center;
+  color: var(--secondary-color);
+  max-width: 85vw;
+}
+
 .container h3
 {
   font-family: 'Progress', sans-serif;
   font-size: 2rem;
   text-align: center;
-}
-
-.container h3
-{
   color: #BBAD86;
   padding-bottom: 2rem;
 }
@@ -90,7 +94,6 @@ body
 .container select
 {
   width: 100%;
-  margin-bottom: 10px;
   background-color: #524532;
   color: var(--primary-color);
   font-size: 2rem;
@@ -115,4 +118,5 @@ body
 {
   background-color: var(--button-background);
   transition: 300ms ease-in-out;
+  transform: scale(1.2);
 }
